replace StoryTime with ReadUp, visual tweak on add-students

--- a/app/views/static_pages/components/_navbar.erb
+++ b/app/views/static_pages/components/_navbar.erb
@@ -1,7 +1,7 @@
 
 
 <ul data-role="header" id="navbar-header">
-  <li><a class="active" id="home" href="#home">StoryTime</a></li>
+  <li><a class="active" id="home" href="">ReadUp</a></li>
 
   <!-- <li><a href="#app" id="app">Get the app</a></li> -->
 </ul>
