--- a/app/views/static_pages/homepage/modals/_congrats-modal.erb
+++ b/app/views/static_pages/homepage/modals/_congrats-modal.erb
@@ -79,7 +79,7 @@
         <div class="modal-body">
           <h1>Congrats!</h1>
           <img class="apple" src="/images/schoolhouse-icon.png" alt="">
-          <h2>You're on the waitlist for StoryTime!</h2>
+          <h2>You're on the waitlist for ReadUp!</h2>
           <h2>We'll email you soon with instructions on how to start.</h2>
           <button type="button" style="display: block; text-align: center; margin: 1em auto;" id="top-button" class="pure-button btn btn-primary btn-lg outline navbar-menu signup-button" data-dismiss="modal">
                   Okay!
