--- a/app/views/static_pages/homepage/modals/_signup-email.erb
+++ b/app/views/static_pages/homepage/modals/_signup-email.erb
@@ -10,8 +10,8 @@
               <div class="navbar-logo" id="modal-logo"></div>
             </div> -->
             <div class="modal-body" style="padding-bottom:1.5em;">
-              <h2 class="modal-signup-heading" style="color:#4A4A4A;">Welcome to StoryTime!</h2>
-              <!-- <h3 class="modal-signup-heading">Welcome to StoryTime</h3> -->
+              <h2 class="modal-signup-heading" style="color:#4A4A4A;">Welcome to ReadUp!</h2>
+              <!-- <h3 class="modal-signup-heading">Welcome to ReadUp</h3> -->
 
               <form id="signup-email" class="signup-form"> 
                 <div class="signup-setup">
