--- a/app/views/static_pages/pages/jobs/design.erb
+++ b/app/views/static_pages/pages/jobs/design.erb
@@ -16,7 +16,7 @@
 		<div class="body" style=" font-size: 1em">
 			<span>About the company:</span>
 			<p>
-			StoryTime sends free stories by text message and messaging apps to families without books— including the billion families without Internet, but with phones. It’s 300 times cheaper than just shipping paperbacks and has increased nightly reading by 160%. As part of a U.S. Department of Education grant, we’re piloting now with thousands of families from the YMCA and U.S. Head Start program.
+			ReadUp sends free stories by text message and messaging apps to families without books— including the billion families without Internet, but with phones. It’s 300 times cheaper than just shipping paperbacks and has increased nightly reading by 160%. As part of a U.S. Department of Education grant, we’re piloting now with thousands of families from the YMCA and U.S. Head Start program.
  <a href="https://www.joinstorytime.com/">www.joinstorytime.com</a> 
 			</p>
 			<br>
@@ -29,7 +29,7 @@
 			<ul>
 				<li>mocking-up new features and curricula</li>	
 				<li>directing our illustrations and visual stories</li>				
-				<li>leading visual design of StoryTime brand material</li>
+				<li>leading visual design of ReadUp brand material</li>
 				<li>sharing design feedback with our creative team</li>
 			</ul>
 			<br>
