--- a/app/views/static_pages/pages/jobs/pilots.erb
+++ b/app/views/static_pages/pages/jobs/pilots.erb
@@ -21,8 +21,8 @@
 			</p>
 			<ul>
 					<li>leading our relationships Head Start districts, government clients, and foundation partners</li>
-					<li> meeting with district and government officials to recruit them to pilot with StoryTime</li>
-					<li>developing and executing our strategy to bring StoryTime to families across the country</li>
+					<li> meeting with district and government officials to recruit them to pilot with ReadUp</li>
+					<li>developing and executing our strategy to bring ReadUp to families across the country</li>
 			</ul>
 			<br>
 
