--- a/app/views/static_pages/pages/jobs/schools.erb
+++ b/app/views/static_pages/pages/jobs/schools.erb
@@ -21,8 +21,8 @@
 
 			</p>
 			<ul>
-					<li>leading our relationships with a group of Head Start preschools so we successfully bring StoryTime to their families</li>
-					<li> working directly with teachers and families so they succeed on StoryTime</li>
+					<li>leading our relationships with a group of Head Start preschools so we successfully bring ReadUp to their families</li>
+					<li> working directly with teachers and families so they succeed on ReadUp</li>
 					<li> designing strategies to best recruit, rollout with, and retain partner schools</li>
 					<li>meeting with school districts to scale our impact to tens of thousands of families.</li>
 			</ul>
