--- a/app/views/static_pages/pages/resources.erb
+++ b/app/views/static_pages/pages/resources.erb
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/stylesheets/fonts.css" type="text/css" />
     <link rel="stylesheet" href="/stylesheets/form.css" type="text/css" />
 	<link href='https://fonts.googleapis.com/css?family=Karla:400,400italic,700' rel='stylesheet' type='text/css'>
-        <title>StoryTime Resources</title>
+        <title>ReadUp Resources</title>
 	</head>
 
 	<body>
@@ -28,7 +28,7 @@
 
 		<h2><a href="https://www.dropbox.com/s/hshmnncrdwtfgjt/StoryTime%20Poetry%20Guidelines.pdf?dl=0">Poetry Guide</h2></a><p>A guide to writing poetry for us.</p>
 
-		<h2><a href="http://joinstorytime.com/doc">Docs</h2></a><p>Code documentation.</p>
+		<!-- <h2><a href="http://joinstorytime.com/doc">Docs</h2></a><p>Code documentation.</p> -->
 		
 	</div>
 
