--- a/app/views/static_pages/pages/team.erb
+++ b/app/views/static_pages/pages/team.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-		<title>StoryTime | Our Team</title>
+		<title>ReadUp | Our Team</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-		<meta name="description" content="StoryTime - Free stories by text message. For every family without books. We're closing the word gap at scale.">
+		<meta name="description" content="ReadUp - Free stories by text message. For every family without books. We're closing the word gap at scale.">
 		
 		<meta property="og:image" content="https://www.joinstorytime.com/images/modules/st-og-image.png">
 
@@ -79,9 +79,9 @@
 				
 				<% team_bios = 
 
-				["Phil studied computer science at Yale and taught Head Start preschool. Previously, he’s researched social policy at Yale, Harvard, and Columbia. He taught at Luciano Martinez Head Start, where he built StoryTime with his class’s families.",
+				["Phil studied computer science at Yale and taught Head Start preschool. Previously, he’s researched social policy at Yale, Harvard, and Columbia. He taught at Luciano Martinez Head Start, where he built ReadUp with his class’s families.",
 
-					"David studied computer science at Yale and turned down a job at Google to start StoryTime. Previously, he’s researched bioinformatics and robotics in Yale labs, engineered at web startups, and taught computer science.  He’s also an actor, having led in 15 shows. He started StoryTime to use art and tech to bring families closer.",
+					"David studied computer science at Yale and turned down a job at Google to start ReadUp. Previously, he’s researched bioinformatics and robotics in Yale labs, engineered at web startups, and taught computer science.  He’s also an actor, having led in 15 shows. He started ReadUp to use art and tech to bring families closer.",
 
 					"Aubrey studied computer science at Yale and grew up in Honduras and Guatemala. Previously, he’s researched social networks in Honduras with the Yale Network Science Institute and taught computer science. He’s also a competitive ultimate frisbee player and avid consumer of podcasts.",
 
