--- a/app/views/static_pages/components/_nav.erb
+++ b/app/views/static_pages/components/_nav.erb
@@ -7,7 +7,7 @@
           <div>
             ReadUp
           </div>
-          <!-- <h1 class="navbar-title">StoryTime</h1> -->
+          <!-- <h1 class="navbar-title">ReadUp</h1> -->
           </a>
           <ul class="navbar-right">
             <li><a href="/case_study">Success Stories</a></li>
