--- a/app/views/static_pages/pages/jobs/product.erb
+++ b/app/views/static_pages/pages/jobs/product.erb
@@ -21,10 +21,10 @@
 			This summer, we’re looking for someone to join our founding team of four Yalies and lead product. You’d direct our design and development so thousands of enrolled families get stories and get talking face-to-face. That would involve: 
 			</p>
 			<ul>
-				<li> talking with families to deeply empathize with their needs and learn how they use StoryTime</li>
+				<li> talking with families to deeply empathize with their needs and learn how they use ReadUp</li>
 				<li> reading on child development to develop new features</li>
 				<li>mocking-up and prototyping new features</li>
-				<li>running trials to improve StoryTime from data and feedback</li>
+				<li>running trials to improve ReadUp from data and feedback</li>
 			</ul>
 			<br>
 			
