--- a/app/views/static_pages/pages/modals/_school-role.erb
+++ b/app/views/static_pages/pages/modals/_school-role.erb
@@ -17,7 +17,7 @@
         <div class="navbar-logo" id="modal-logo"></div>
       </div>
       <div class="modal-body">
-        <h2 class="modal-signup-heading">Sign up for StoryTime as a...</h2>
+        <h2 class="modal-signup-heading">Sign up for ReadUp as a...</h2>
         <!-- <h3 class="modal-signup-heading">to add your class</h3> -->
 
         <div class="pure-g">
