--- a/app/views/static_pages/homepage/modals/_signup-name-password.erb
+++ b/app/views/static_pages/homepage/modals/_signup-name-password.erb
@@ -2,7 +2,7 @@
 <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> -->
 <div class="modal fade" id="signupNamePassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document" style="width: 35em;">
-    <div class="modal-content" style="height: 100%; margin-top: 20%;  ">
+    <div class="modal-content" style="height: 100%; margin-top: 20%;">
       <!-- <div class="modal-header" data-dismiss="modal">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
@@ -10,11 +10,13 @@
         <div class="navbar-logo" id="modal-logo"></div>
       </div> -->
       <div class="modal-body">
-          
-            <h2 class="modal-signup-heading name-heading" style="margin-bottom: 1.2em">Enter your name and password</h2>
 
+            <h2 class="modal-signup-heading name-heading" style="margin-bottom: 1.2em">
+              Enter your name and password
+            </h2>
 
-            <form id='signup-name-password' class="signup-form" action='/users' method="post"> 
+            <form id='signup-name-password' class="signup-form" action='/users' method="post">
+              <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
               <!-- <form id='login'> -->
                 <div class="signup-setup">
                   <div class="field" id="signup-field">
@@ -22,14 +24,12 @@
                       <input name="user[last_name]" id="signup-last-input" autocomplete="off" placeholder="Last name" class="input" required>
                       <input name="user[password]" id="signup-password-input" autocomplete="off" placeholder="Password" type="password" class="input" pattern=".{6,}" title="Password must be at least 6 characters long" required>
                   </div>
-                  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
-                  <button id="signup-name-password-button" data-dismiss='modal' class="signup-form-button pure-button pure-button-primary get_update dialog-button">Complete sign up</button>
+                  <button id="signup-name-password-button" data-dismiss='modal' class="signup-form-button pure-button pure-button-primary get_update dialog-button">
+                    Complete sign up
+                  </button>
 
                </div>
-
-              <script>
-              </script>
 
             </form>
       </div>
