--- a/app/views/static_pages/signup/modals/_add_students.erb
+++ b/app/views/static_pages/signup/modals/_add_students.erb
@@ -62,7 +62,7 @@
 
         <div data-role="main" class="body invite-teacher">
 
-          <div class="container" style="padding-top:0em;">
+          <div class="container" style="padding-top:0em; margin: auto;">
             <div class="content-wrapper">
 
                 <h2 class="modal-signup-heading" id="modal-signup-heading">Add Students</h2>
@@ -90,7 +90,13 @@
                     <p class="no-students-added">No students added yet</p>
                   </div>
 
-                  <a id="page5link" class="transition-link ui-btn web-mobile-signup-button submit-button-disabled" href="#" data-transition="fade">
+                  <a 
+                    id="page5link" 
+                    class="transition-link ui-btn web-mobile-signup-button submit-button-disabled" 
+                    href="#" 
+                    data-transition="fade"
+                    style="font-size: 1.3em;"
+                  >
                     Done adding students
                   </a>
 
