--- a/client/src/StudentDashboard/components/modals/SubmittedModal/styles.css
+++ b/client/src/StudentDashboard/components/modals/SubmittedModal/styles.css
@@ -1,7 +1,5 @@
 
 .submittedContainer {
-	width: 100%;
-	height: 100%;
 	background-color: black;
 	color: white;
 	display: flex;
@@ -9,6 +7,15 @@
 	align-items: center;
 	flex-flow: column;
 	text-align: center;
+	/*opacity: 0.95;*/
+
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	z-index: 999;
+	
 }
 
 .submittedImage {
