added pulsating arrow animation on recording buttons

--- a/app/views/layouts/student_dashboard.html.erb
+++ b/app/views/layouts/student_dashboard.html.erb
@@ -7,6 +7,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+    <%= javascript_include_tag "https://use.fontawesome.com/d79995f506.js" %>
+
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" %>
 
     <% if ENV["HMR"] == "1" %>
