--- a/client/src/StudentDashboard/components/RectangleButton/styles.css
+++ b/client/src/StudentDashboard/components/RectangleButton/styles.css
@@ -59,3 +59,29 @@
 	font-size: 1.1em;
 }
 
+@keyframes pulse-right {
+	from {
+		transform: translateX(0.1em) 
+		scale(1.1)
+	}
+	to {
+		transform: translateX(-0.1em)
+	}
+}
+
+.pulsatingArrow {
+	position: relative;
+	left: -15px;
+	animation: pulse-right 800ms infinite alternate;
+}
+
+
+
+
+
+
+
+
+
+
+
