--- a/app/views/static_pages/signup/modals/_success.erb
+++ b/app/views/static_pages/signup/modals/_success.erb
@@ -28,15 +28,29 @@
                   <img src="https://s3.amazonaws.com/st-webpage/assets/logo/logo-large.png"  alt="">
                 </div>
 
-
-                <a id="backToHome" data-ajax="false" class="transition-link ui-btn web-mobile-signup-button" href="/" style="font-size: 1.2em;">
-                    Back to HomePage
+                <a
+                  id="backToHome"
+                  data-ajax="false"
+                  class="transition-link ui-btn web-mobile-signup-button"
+                  style="font-size: 1.2em;"
+                  href="#"
+                >
+                  Back to HomePage
                 </a>
 
             </div>
           </div>
         </div> <%# end pure-g %>
 
-
+        <script type="text/javascript">
+          $('#backToHome').click(function() {
+            $.ajax({
+              url: 'auth/pring',
+              type: 'get',
+            }).done(function(data, statusText, xhr) {
+              console.log('piss');
+            })
+          });
+        </script>
 
 </div> <%# wrapper %>
