Modified how AWS response is handled. Will be modified again once server side is ready to process that info.

--- a/app/views/audio_process/audio.html.erb
+++ b/app/views/audio_process/audio.html.erb
@@ -89,8 +89,8 @@
         oReq.setRequestHeader("processData", false); 
         oReq.send(data);
         oReq.onload = function(oEvent) {
-            if (oReq.status == 200) {
-                console.log("Uploaded");
+            if (oReq.status == 201) {
+                console.log("Uploaded." + oReq.response);
             } else {
                 console.log("Error " + oReq.status + " occurred uploading your file.");
             }
