a basic redirect upon account creation to student dashboard

--- a/app/views/static_pages/signup/modals/_find-school.erb
+++ b/app/views/static_pages/signup/modals/_find-school.erb
@@ -223,7 +223,7 @@
                           data: postData
                         }).done(function(data, statusText, xhr) {
                           var cur = window.location.hostname
-                          location.href= "/success"
+                          location.href= "/student_dashboard/#/story/demo/page/1"
                         }).fail(function(){
 
                           }
